src/test/ui/associated-types/associated-types-in-ambiguous-context.stderr
error[E0223]: ambiguous associated type
  --> $DIR/associated-types-in-ambiguous-context.rs:6:36
   |
LL | fn get<T:Get,U:Get>(x: T, y: U) -> Get::Value {}
   |                                    ^^^^^^^^^^ help: use fully-qualified syntax: `<Type as Get>::Value`

error[E0223]: ambiguous associated type
  --> $DIR/associated-types-in-ambiguous-context.rs:15:10
   |
LL | type X = std::ops::Deref::Target;
   |          ^^^^^^^^^^^^^^^^^^^^^^^ help: use fully-qualified syntax: `<Type as std::ops::Deref>::Target`

error[E0223]: ambiguous associated type
  --> $DIR/associated-types-in-ambiguous-context.rs:11:23
   |
LL |     fn grab(&self) -> Grab::Value;
   |                       ^^^^^^^^^^^ help: use fully-qualified syntax: `<Type as Grab>::Value`

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0223`.
